@@ -124,4 +124,5 @@ ATTR_polljobs,
 ATTR_downonerror,
 ATTR_jobnanny,
 ATTR_momjobsync,
+ATTR_maildomain,
 ATTR_pbsversion,
